--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -1,9 +1,136 @@
-._navbar {
+a:hover, a:visited, a:link, a:active
+{
+    text-decoration: none;
+    color:#39374d;
+}
+
+ ._navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem 1rem;
+ }
+
+._navbar-links {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+._navbar-links_logo {
+  margin-right: 2rem;
+}
+
+._navbar-links_logo img{
+  width: 120px;
+  height: 60px;
+}
+
+._navbar-links_container {
+  display: flex;
+  flex-direction: row;
+}
+
+._navbar-links_container p,
+._navbar-menu_container p {
+  font-style: normal;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  text-transform: capitalize;
+
+  margin: 0 1rem;
+  cursor: pointer;
+}
+
+._navbar-contact button,
+._navbar-menu_container button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: #71BF44;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 25px;
+  border-radius: 5px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+}
+
+._navbar-menu {
+  margin-left: 1rem;
+  display: none;
+  position: relative;
+}
+
+._navbar-menu_container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: column;
+
+  text-align: end;
+  background: #f3f1fa;
+  padding: 1rem;
+  position: absolute;
+  top: 30px;
+  right: 0;
+  margin-top: 1rem;
+  width: max-content;
+  /* min-width: px; */
+  border-radius: 5px;
+  box-shadow: 0 0 5 rgba(0,0,0,0.2);
+}
+
+._navbar-menu_container p {
+  margin: 1rem 0;
+}
+
+._navbar-menu_container-links-contact {
+  display: none;
+}
+
+@media screen and (max-width: 1050px) {
+  ._navbar-links_container {
+    display: none;
+  }
+
+  ._navbar-menu {
+    display: flex;
+  }
+
+  ._navbar-links {
+    justify-content:space-between;
+ }
+}
+
+@media screen and (max-width: 700px) {
+   ._navbar-links {
+     justify-content:space-between;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  ._navbar-links {
+    justify-content:space-between;
+  }
+
+  ._navbar-contact {
+    display: none;
+  }
+ }
+
+
+
+
+/* ._navbar {
   width: 1100px;
   margin-right: auto;
   margin-left: auto;
-  padding-right: 15px;
-  padding-left: 15px;
+  padding: 20px 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,19 +141,108 @@
   height: 15%;
 }
 
+._navbar ul {
+  white-space: nowrap;
+}
+
 ._navbar ul li {
   display: inline-block;
   list-style: none;
-  margin: 10px 10px;
+  margin: 10px 15px;
 }
 
 ._navbar ul li a {
+  color: #39374d;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-size: 17px;
+  font-style: normal;
   text-decoration: none;
-  color: black;
+}
+
+.menu-icon {
+  display: none;
+}
+
+
+.plus_pin {
+  vertical-align: bottom;
+}
+
+._navbar ul li:last-child {
+  margin-right: 0px;
+}
+
+._navbar ul li a:hover{
+    color:#71BF44;
+}
+
+._navbar .nav-button a {
+  display: inline-block;
+  color: #fff;
+  background: #71BF44;
+  padding: 15px 35px;
+  border-radius: 5px;
+  z-index: 1;
+  position: relative;
+}
+
+.nav-button a:hover {
+  color: #71BF44;
+  border: none;
+}
+
+.nav-button a:before {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  content: '';
+  z-index: -1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: 1px solid #71BF44;
+  transform: scale(0.0, 1);
+  opacity: 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  border-radius: 5px;
+}
+
+.nav-button a:hover:before {
+  transform: scale(1, 1);
+  opacity: 1;
+  border: 1px solid #71BF44;
+  background: #fff;
+  color: #71BF44;
 }
 
 @media (max-width: 1200px) {
   ._navbar {
     width: 900px;
   }
+
+  ._navbar ul li a {
+    font-size: 14px;
+  }
+
 }
+
+@media (max-width: 992px) {
+  ._navbar ul {
+    display: none;
+  }
+
+  .menu-icon {
+    display: inline-block;
+    font-size: 30px;
+    font-weight: 400;
+    color: #71BF44;
+    margin-right: 0px;
+  }
+
+
+} */
+
