--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -4,11 +4,11 @@ a:hover, a:visited, a:link, a:active
     color:#39374d;
 }
 
- ._navbar {
+._navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 1rem;
+  /* padding: 1rem 1rem; */
  }
 
 ._navbar-links {
@@ -16,6 +16,7 @@ a:hover, a:visited, a:link, a:active
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 1rem;
 }
 
 ._navbar-links_logo {
@@ -30,6 +31,7 @@ a:hover, a:visited, a:link, a:active
 ._navbar-links_container {
   display: flex;
   flex-direction: row;
+  align-items: center;
 }
 
 ._navbar-links_container p,
@@ -66,23 +68,8 @@ a:hover, a:visited, a:link, a:active
   position: relative;
 }
 
-._navbar-menu_container {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  flex-direction: column;
-
-  text-align: end;
-  background: #f3f1fa;
-  padding: 1rem;
-  position: absolute;
-  top: 30px;
-  right: 0;
-  margin-top: 1rem;
-  width: max-content;
-  /* min-width: px; */
-  border-radius: 5px;
-  box-shadow: 0 0 5 rgba(0,0,0,0.2);
+.menu-icon {
+  display: none;
 }
 
 ._navbar-menu_container p {
@@ -94,8 +81,51 @@ a:hover, a:visited, a:link, a:active
 }
 
 @media screen and (max-width: 1050px) {
+  ._navbar-links {
+    position: relative;
+  }
+
   ._navbar-links_container {
-    display: none;
+    background-color: #037DC5;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 90vh;
+    position: absolute;
+    top: 95px;
+    left: -100%;
+    opacity: 1;
+    transition: all 0.5s ease;
+  }
+
+  ._navbar-links_container.active {
+    background: #037DC5;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
+    z-index: 1;
+  }
+
+  ._navbar-links_container p{
+    background-color: #037DC5;
+    text-align: center;
+    padding: 1rem 0;
+    width: 100%;
+    margin: 0;
+  }
+
+  ._navbar-links_container a{
+    background-color: #037DC5;
+    color: #fff;
+  }
+
+  .plus_pin {
+    background-color: #037DC5;
+    color: #fff;
+  }
+
+  ._navbar-links_container ._navbar-contact{
+    background-color: #037DC5;
   }
 
   ._navbar-menu {
@@ -105,6 +135,16 @@ a:hover, a:visited, a:link, a:active
   ._navbar-links {
     justify-content:space-between;
  }
+
+ .menu-icon {
+  display: block;
+  position: absolute;
+  top: 10px;
+  right: 0;
+  transform: translate(-100%, 60%);
+  font-size: 1.8rem;
+  cursor: pointer;
+}
 }
 
 @media screen and (max-width: 700px) {
@@ -117,132 +157,5 @@ a:hover, a:visited, a:link, a:active
   ._navbar-links {
     justify-content:space-between;
   }
-
-  ._navbar-contact {
-    display: none;
-  }
  }
-
-
-
-
-/* ._navbar {
-  width: 1100px;
-  margin-right: auto;
-  margin-left: auto;
-  padding: 20px 15px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-._navbar img {
-  width: 15%;
-  height: 15%;
-}
-
-._navbar ul {
-  white-space: nowrap;
-}
-
-._navbar ul li {
-  display: inline-block;
-  list-style: none;
-  margin: 10px 15px;
-}
-
-._navbar ul li a {
-  color: #39374d;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 17px;
-  font-style: normal;
-  text-decoration: none;
-}
-
-.menu-icon {
-  display: none;
-}
-
-
-.plus_pin {
-  vertical-align: bottom;
-}
-
-._navbar ul li:last-child {
-  margin-right: 0px;
-}
-
-._navbar ul li a:hover{
-    color:#71BF44;
-}
-
-._navbar .nav-button a {
-  display: inline-block;
-  color: #fff;
-  background: #71BF44;
-  padding: 15px 35px;
-  border-radius: 5px;
-  z-index: 1;
-  position: relative;
-}
-
-.nav-button a:hover {
-  color: #71BF44;
-  border: none;
-}
-
-.nav-button a:before {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: '';
-  z-index: -1;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  border: 1px solid #71BF44;
-  transform: scale(0.0, 1);
-  opacity: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  border-radius: 5px;
-}
-
-.nav-button a:hover:before {
-  transform: scale(1, 1);
-  opacity: 1;
-  border: 1px solid #71BF44;
-  background: #fff;
-  color: #71BF44;
-}
-
-@media (max-width: 1200px) {
-  ._navbar {
-    width: 900px;
-  }
-
-  ._navbar ul li a {
-    font-size: 14px;
-  }
-
-}
-
-@media (max-width: 992px) {
-  ._navbar ul {
-    display: none;
-  }
-
-  .menu-icon {
-    display: inline-block;
-    font-size: 30px;
-    font-weight: 400;
-    color: #71BF44;
-    margin-right: 0px;
-  }
-
-
-} */
 
